<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingBottom="16dp"
    android:paddingTop="15dp"
    android:background="@color/background_color"
    tools:context = "br.com.myshowproject.myshowapp.MainActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:hint="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:layout_centerHorizontal="true"
        android:textSize="30dp" />

    <EditText
        android:id="@id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:layout_below="@+id/loginTextView" />

    <EditText
        android:id="@id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/email"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:typeface="monospace"
        android:background="@color/background_color_button"
        android:onClick="login" />

    <Button
        android:id="@+id/registerButton"
        android:text="@string/register"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:typeface="monospace"
        android:layout_alignParentRight="true"
        android:background="@color/background_color_button"
        android:onClick="redirectToRegister" />

</RelativeLayout>
